# QuickSoundSwitcher

./: .gitignore  ACMBKz.json  CMakeLists.txt  QuickSoundSwitcher.pro  README.md  installer.iss  main.cpp
.github/: BUILDING.md  FUNDING.yml  TRANSLATIONS.md
.github/workflows/: build-and-release.yml  build.yml  compile_translations.yml  release.yml
AudioManager/: AudioManager.cpp  AudioManager.h
Cmake/: Resources.cmake  SourceGroups.cmake
MediaFlyout/: MediaFlyout.cpp  MediaFlyout.h  MediaFlyout.ui
MediaSessionWorker/: MediaSession.h  MediaSessionWorker.cpp  MediaSessionWorker.h
OverlaySettings/: OverlaySettings.cpp  OverlaySettings.h  OverlaySettings.ui
OverlayWidget/: OverlayWidget.cpp  OverlayWidget.h
Panel/: Panel.cpp  Panel.h  Panel.ui
QuickSoundSwitcher/: QuickSoundSwitcher.cpp  QuickSoundSwitcher.h
Resources/: appicon.rc  resources.qrc
Resources/Tr/: QuickSoundSwitcher_de.ts  QuickSoundSwitcher_en.ts  QuickSoundSwitcher_fr.ts  QuickSoundSwitcher_ko.ts  QuickSoundSwitcher_zh_CN.ts
Resources/icons/: icons.qrc
Resources/qml/: MediaFlyout.qml  SettingsPage.qml  SoundOverlay.qml  SoundPanel.qml  SoundPanel10.qml  SoundPanel11.qml
Resources/sounds/: sounds.qrc
SettingsPage/: SettingsPage.cpp  SettingsPage.h  SettingsPage.ui
ShortcutManager/: ShortcutManager.cpp
SoundOverlay/: SoundOverlay.cpp  SoundOverlay.h  SoundOverlay.ui
SoundPanel/: SoundPanel.cpp  SoundPanel.h
Utils/: Utils.cpp  Utils.h
cmake/: languages.cmake  translation_progress.cmake
i18n/: QuickSoundSwitcher_de.ts  QuickSoundSwitcher_en.ts  QuickSoundSwitcher_fr.ts  QuickSoundSwitcher_it.ts  QuickSoundSwitcher_ko.ts  QuickSoundSwitcher_ru.qm.ts  QuickSoundSwitcher_ru.ts  QuickSoundSwitcher_zh_CN.ts
i18n/compiled/: QuickSoundSwitcher_de.qm  QuickSoundSwitcher_en.qm  QuickSoundSwitcher_fr.qm  QuickSoundSwitcher_it.qm  QuickSoundSwitcher_ko.qm  QuickSoundSwitcher_ru.qm  QuickSoundSwitcher_zh_CN.qm
include/: SoundPanel.h  audiobridge.h  audiomanager.h  mediasessionmanager.h  quicksoundswitcher.h  shortcutmanager.h  soundpanelbridge.h  updatechecker.h  utils.h
qml/: ApplicationsListView.qml  Card.qml  ChatMixNotification.qml  DevicesListView.qml  KeepAlive.qml  MediaFlyoutContent.qml  NFSlider.qml  NFToolButton.qml  ProgressSlider.qml  SettingsWindow.qml  SoundPanel.qml  SystemTray.qml
qml/SettingsPane/: AppearancePane.qml  CommAppsPane.qml  DebugPane.qml  GeneralPane.qml  LanguagePane.qml  ShortcutsPane.qml  UpdatePane.qml
qml/Singletons/: Constants.qml  Context.qml  UserSettings.qml
src/: audiobridge.cpp  audiomanager.cpp  languages.h.in  main.cpp  mediasessionmanager.cpp  quicksoundswitcher.cpp  shortcutmanager.cpp  soundpanel.cpp  soundpanelbridge.cpp  translation_progress.h.in  updatechecker.cpp  utils.cpp  version.h.in  windows_metadata.rc.in
src/AudioManager/: audiomanager.cpp  audiomanager.h
src/CustomTrayIcon/: customtrayicon.h
src/Panel/: panel.cpp  panel.h  panel.ui
src/QuickSoundSwitcher/: quicksoundswitcher.cpp  quicksoundswitcher.h
src/Resources/: resources.qrc
src/ShortcutManager/: shortcutmanager.cpp  shortcutmanager.h
src/Utils/: utils.cpp  utils.h
tools/: installer.iss
updater/: CMakeLists.txt
updater/include/: updatemanager.h
updater/qml/: Main.qml
updater/src/: main.cpp  updatemanager.cpp
